fixed a tailwind class

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p class="font-semibold font-sans text-3xl text-orange-400">V</p>
                 <p class="font-medium font-sans text-xl">B4</p>
             </div>
-            <div class="absolute top-0 left-[72px] w-full h-[60%] grid gap-11"
+            <div class="absolute top-0 left-[72px] w-full h-[60%] grid gap-[44px]"
                 style="grid-template-columns: repeat(13, 60px);">
                 <div id="Cs3"
                     class="transition-all duration-200 ease-in-out bg-black rounded-b-lg flex flex-col pb-4 justify-end items-center gap-2">
