--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtual Keyboard</title>
     <link rel="stylesheet" href="output.css">
+    <link rel="shortcut icon" href="assets/fav.png" type="image/png">
 </head>
 
 <body class="select-none">
